# Backend_Server

./: .dockerignore  .env  .env.development  .env.example  .env.render  .env.template  .gitignore  DEPLOY_RENDER.md  Dockerfile  FORCE_DEPLOY.sh  LOCUST.md  NEW_CODE_MARKER.txt  README.md  alembic.ini  byd_seal_affected_rows_before.csv  check_db_schema.py  check_docs_status.py  check_env.py  check_server_restart.py  codyssey_backup.sql  deployment_status.md  docker-compose.yml  force_restart.txt  init_db.py  kepco_2025_new.py  locustfile.py  polestar_affected_rows.csv  polestar_affected_rows_retry.csv  project_structure.txt  pyproject.toml  render.yaml  saleprice_backup_before_divide.csv  sensitive-files.txt  start.sh  subsidy.csv  subsidy_repaired.csv  temp_new_function.py  test_api_direct.py  test_api_local.py  test_infra.py  (+1 more)
alembic/: env.py
app/: auth.py  config.py  database.py  main.py  mock_api.py  models.py  redis_client.py  schemas.py
nginx/: .htpasswd
outgoing_patches/: PR_INSTRUCTIONS.md  add_admin_cache_unlocked.patch  subsidies_backup_20251031_114147.csv  test_byd_seal_backup.csv
render-clean/: config  packed-refs
scripts/: apply_subsidy_mappings.sh  backfill_kepco.py  check_db.py  check_services.sh  clear_redis_cache.py  clear_redis_cache.sh  commit_push_tag_render.sh  delete_redis_key.sh  deploy_render.sh  fill_station_locations_from_chargers.sh  fill_station_locations_from_chargers.sql  find_fix_duplicate_stations.py  generate_subsidy_inserts.py  init_subsidy_data.py  migrate.py  move_main_to_f1.sh  normalize_subsidy_csv.py  query_kepco_for_station.py  repair_subsidy_csv.py  run_local_tests.py  run_migrations.sh  (+18 more)
(+55 files in other folders)
